# src/urls.py
@@ -1,7 +1,8 @@
-from resources import getters
-from resources import setters
-from resources import signals
-from resources import events
+from .resources import getters
+from .resources import setters
+from .resources import signals
+from .resources import events
+from .resources import locker
 
 urls = [
     (['GET'], '/metrics/<sensor>/<metric>', getters.get_metric_by_sensor),
@@ -15,4 +16,7 @@ urls = [
     (['GET'], '/events', events.get_event_ids),
     (['POST'], '/events', events.create_event),
     (['DELETE'], '/events', events.delete_event_by_ids),
+
+    (['GET'], '/locker/lock', locker.lock),
+    (['GET'], '/locker/release', locker.release)
 ]
